# 8008-experiment

./: .gitignore  README.md  SDSC8008 report.md  baseline model.ipynb  pyproject.toml  requirements.txt  run_experiment_matrix.py  run_pao_grid_search.py
project/: constants.py  interfaces.py  main.py
project/data/: category.py  dataset.py
project/environment/: inventory.py
project/solver/: abca.py
project/train/: loop.py
