[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "predict-then-optimize"
version = "0.1.0"
description = "End-to-End Decision Learning (Predict-then-Optimize) pipeline project"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastprogress",
    "joblib",
    "lightgbm",
    "matplotlib",
    "numba>=0.65.0",
    "numpy<2",
    "pandas",
    "plotly",
    "scikit-learn",
    "seaborn",
    "torch",
    "tqdm",
    "wandb>=0.25.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "isort"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["project*", "CNN+LSTM*", "LightGBM*"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
